[workspace]
members = [
	"cli",
	"lib",
]
resolver = "2"

[workspace.package]
authors    = ["Xavier Lau <x@acg.box>"]
edition    = "2021"
homepage   = "https://hack.ink/polkadot-runtime-releaser"
license    = "GPL-3.0"
repository = "https://github.com/hack-ink/polkadot-runtime-releaser"
version    = "0.1.0"

[workspace.dependencies]
# crates.io
anyhow             = { version = "1.0" }
clap               = { version = "4.5" }
color-eyre         = { version = "0.6" }
nix                = { version = "0.29" }
reqwew             = { version = "0.6", default-features = false }
serde              = { version = "1.0" }
subrpcer           = { version = "0.11" }
subwasmlib         = { version = "0.13" }
thiserror          = { version = "2.0" }
tokio              = { version = "1.4" }
toml               = { version = "0.8" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
vergen-gitcl       = { version = "1.0" }
# self
prr-lib = { version = "0.1", path = "lib" }

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true
