[workspace]
members = [
	"cli",
	"lib",
]
resolver = "2"

[workspace.package]
authors    = ["Xavier Lau <x@acg.box>"]
edition    = "2021"
homepage   = "https://hack.ink/polkadot-runtime-releaser"
license    = "GPL-3.0"
repository = "https://github.com/hack-ink/polkadot-runtime-releaser"
version    = "0.1.1"

[workspace.dependencies]
# crates.io
anyhow                   = { version = "1.0" }
array-bytes              = { version = "8.0" }
blake2                   = { version = "0.10" }
chrono                   = { version = "0.4" }
clap                     = { version = "4.5" }
color-eyre               = { version = "0.6" }
ipfs-cid                 = { version = "2.0" }
md-5                     = { version = "0.10" }
parity-scale-codec       = { version = "3.6" }
reqwew                   = { version = "0.6", default-features = false }
sc-executor              = { version = "0.40" }
serde                    = { version = "1.0" }
serde_json               = { version = "1.0" }
sha2                     = { version = "0.10" }
sp-core                  = { version = "34.0" }
sp-maybe-compressed-blob = { version = "11.0" }
sp-state-machine         = { version = "0.43" }
sp-version               = { version = "37.0" }
thiserror                = { version = "2.0" }
tokio                    = { version = "1.42" }
toml                     = { version = "0.8" }
tracing                  = { version = "0.1" }
tracing-subscriber       = { version = "0.3" }
vergen-gitcl             = { version = "1.0" }
# self
prr-lib = { version = "0.1", package = "polkadot-runtime-releaser-lib", path = "lib" }

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true
