[package]
authors.workspace = true
build             = "build.rs"
description       = "Polkadot Runtime Releaser CLI."
edition.workspace = true
name              = "polkadot-runtime-releaser-cli"
readme            = "README.md"
version.workspace = true

[[bin]]
name = "prr"
path = "src/main.rs"

[build-dependencies]
# crates.io
vergen-gitcl = { workspace = true, features = ["cargo"] }

[dependencies]
# crates.io
anyhow             = { workspace = true }
array-bytes        = { workspace = true, features = ["serde"] }
chrono             = { workspace = true }
clap               = { workspace = true, features = ["derive"] }
color-eyre         = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
# self
prr-lib = { workspace = true }
