[package]
authors.workspace    = true
description          = "Polkadot Runtime Releaser library."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "polkadot-runtime-releaser-lib"
readme               = "../README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
atty                     = { workspace = true }
blake2                   = { workspace = true }
frame-metadata           = { workspace = true }
md-5                     = { workspace = true }
parity-scale-codec       = { workspace = true }
reqwew                   = { workspace = true, features = ["blocking", "charset", "http2", "json", "reqwest", "rustls-tls"] }
sc-executor              = { workspace = true }
sc-executor-common       = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }
serde_json               = { workspace = true }
sha2                     = { workspace = true }
sp-core                  = { workspace = true }
sp-maybe-compressed-blob = { workspace = true }
sp-state-machine         = { workspace = true }
thiserror                = { workspace = true }
tracing                  = { workspace = true }
